tests/paczka2/big_fuzzy/42107902.err
Error in line 6: HbyzT S589 50,4
Error in line 7: HbyzT S882 8,6
Error in line 14: qON A546 65,2
Error in line 26: ª546 S654 67,4
Error in line 23: Q6xflq50 A546 99,1
Error in line 27: Q6xflq50 S589 6,2
Error in line 42: HbyzT S88+ 31,5
Error in line 40: aU5Xrn9Ck6 A546 64,7
Error in line 64: QikI9Ty9E S654 10,7
Error in line 66: QikI9Ty9E A546 92,7
Error in line 73: aU5Xrn9Ck6 S882 60,06
Error in line 71: WCQ A546 19,8
Error in line 74: WCQ S654 27,0
Error in line 76: A546 S654 141,7
Error in line 80: aU5Xrn9Ck6 S882 130,3
Error in line 85: QikI9Ty9E S654 43,2
Error in line 91: aU5Xrn9Ck6 S882 87,6
Error in line 99: WCQ S654 -3,9
Error in line 107: qON S589 66,2
Error in line 108: WCQ S654 42,9
Error in line 103: HbyzT S882 61,7
Error in line 111: qON S654 259,4
Error in line 124: QikI9Ty9E S589 92,7
Error in line 126: QikI9Ty9E S654 75,5
Error in line 135: A546 S589 49,5
Error in line 136: QikI9Ty9E S882 99,0
Error in line 143: QikI9Ty9E S589 59,0
Error in line 146: Q6xflq50 S654 61,1
Error in line 142: aU5Xrn9Ck6 S882 39,1
Error in line 168: WCQ S654 24,9
Error in line 174: aU5XrÀ9Ck6 S589 52,1
Error in line 171: WCQ S882 40,9
Error in line 172: aU5Xrn9Ck6 S654 40,7
Error in line 180: qON S589 55,3
Error in line 178: aU5Xrn9Ck6 S882 13,1
Error in line 188: Q6xflq50 S589 71,0
Error in line 196: qON S589 1,6
Error in line 204: QikI9Ty9E A546 11,5
Error in line 207: HbyzT S882 155,6
Error in line 202: WCQ S654 100,1
Error in line 212: WCQ A546 36,6
Error in line 216: WCQ S589 85,2
Error in line 213: A546 S882 35,5
Error in line 218: QikI9Ty9E S882 1,3
Error in line 238: A546 A546 6,9
Error in line 237: QikI9Ty9E S882 85,4
Error in line 229: aU5Xrn9Ck6 S589 20,9
Error in line 245: aU5Xrn9Ck6 S654 81,6
Error in line 248: WCQ S654 9,3
